setup mail for send mails

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,10 @@
     "start": "node ./dist/index.js",
     "server": "nodemon ./dist/index.js",
     "watch": "tsc -w",
-    "build": "tsc",
-    "dev": "concurrently \"npm run watch\" \"npm run server\" "
+    "build": "concurrently \"tsc\" \"npm run copy-files\" ",
+    "dev": "concurrently \"npm run watch\" \"npm run server\" \"npm run watch-views\"",
+    "copy-files": "copyfiles -u 1 \"src/views/**/*\" dist/",
+    "watch-views": "nodemon --watch src/views -e ejs -x \"npm run copy-files\""
   },
   "keywords": [],
   "author": "",
@@ -19,12 +21,17 @@
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.21.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
+    "@types/nodemailer": "^6.4.16",
+    "copyfiles": "^2.4.1",
     "typescript": "^5.6.3"
   }
 }
