--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bullmq": "^5.21.2",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
