--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcrypt": "^5.1.1",
     "bullmq": "^5.21.2",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
@@ -25,13 +26,16 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "nodemailer": "^6.9.15",
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
     "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
     "typescript": "^5.6.3"
   }
