--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "prisma": "^5.21.1",
     "zod": "^3.23.8"
@@ -33,6 +34,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.6",
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
