--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.15",
     "prisma": "^5.21.1",
     "zod": "^3.23.8"
