--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -34,8 +35,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.6",
     "@types/nodemailer": "^6.4.16",
