--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.21.2",
     "concurrently": "^9.0.1",
@@ -31,6 +32,7 @@
     "moment": "^2.30.1",
     "nodemailer": "^6.9.15",
     "prisma": "^5.21.1",
+    "socket": "^0.14.22",
     "zod": "^3.23.8"
   },
   "devDependencies": {
