--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "next": "14.2.15",
     "next-auth": "^4.24.9",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
